@@ -23,6 +23,7 @@
 #define DPENGINE_SAVE_H
 #include <dpcommon/common.h>
 
+typedef struct DP_Annotation DP_Annotation;
 typedef struct DP_CanvasState DP_CanvasState;
 typedef struct DP_DrawContext DP_DrawContext;
 typedef struct DP_Rect DP_Rect;
@@ -35,6 +36,9 @@ typedef struct DP_SaveFormat {
 
 // Returns supported formats for saving, terminated by a {NULL, NULL} element.
 const DP_SaveFormat *DP_save_supported_formats(void);
+
+typedef bool (*DP_SaveBakeAnnotationFn)(void *user, DP_Annotation *a,
+                                        unsigned char *out);
 
 
 typedef enum DP_SaveImageType {
@@ -60,7 +64,8 @@ typedef enum DP_SaveResult {
 DP_SaveImageType DP_save_image_type_guess(const char *path);
 
 DP_SaveResult DP_save(DP_CanvasState *cs, DP_DrawContext *dc,
-                      DP_SaveImageType type, const char *path);
+                      DP_SaveImageType type, const char *path,
+                      DP_SaveBakeAnnotationFn bake_annotation, void *user);
 
 
 typedef bool (*DP_SaveAnimationProgressFn)(void *user, double progress);
